assets/global.scss
$brand-primary: darken(#428bca, 20%);
$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";

@import '~bootstrap-sass/assets/stylesheets/bootstrap';
@import 'scss/front/leftMenu.scss';
@import 'scss/front/topMenu.scss';
@import 'scss/front/topRessource.scss';
@import 'scss/front/rightPlanet.scss';
@import 'scss/front/galaxy.scss';
@import 'scss/front/ally.scss';
@import 'scss/front/unconnected.scss';
@import 'scss/front/building.scss';
@import 'scss/front/research.scss';
@import 'scss/front/spatial.scss';
@import 'scss/front/message.scss';
@import 'scss/front/options.scss';

@media screen and (min-width: 1025px) {
  body.area {
    margin: 0 auto;
    color: #fff;
    background-image: $back-wall-connected;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-color: $color-black;
    height: auto;
    font-size: 1.2rem;
    padding: 0 4rem 4rem 4rem;
  }
}

@media screen and (max-width: 1025px) {
  body.area {
    margin: 0 auto;
    color: #fff;
    background: $back-wall-connected no-repeat top, $back-wall repeat bottom;
    background-attachment: fixed;
    background-size: cover;
    background-color: $color-black;
    max-width: 1280px;
    height: auto;
    font-size: 1.3rem;
    padding: 0 1rem 0 1rem;
  }
}

@media screen and (max-width: 1200px) {
 .hideForLittle {
   display: none;
 }
}


@media screen and (min-width: 1200px) {
  .hideForBig {
    display: none;
  }
}

::-webkit-input-placeholder {
  color: #fff;
  text-shadow: 1.5px 1.5px 2px rgba(0,0,0, 0.8);
}

img.logo {
  width: 85px;
  height: 70px;
}

.btn-start {
  color: #fff;
  background-color: green;
  border-color: green;
}

.timerArea a {
  color: white;
  text-decoration: underline;
}

.confirm-button {
  color: #000000;
  font-size: 1.8rem;
  padding: 0.5rem 1rem;
  width: auto;
  height: 30px;
  line-height: 1rem;
  background-image: $back-button-confirm;
  margin-left: 0.6rem;
  text-shadow: 1.5px 1.5px 2px rgba(255,255,255, 0.3);
  border: 1px solid $color-black;
  border-radius: 5px;
}

.game-input {
  color: #fff!important;
  width: 100%;
  height: 30px;
  font-size: 1.2rem;
  background-image: $back-form;
  line-height: 1.5rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  text-shadow: 1.5px 1.5px 2px rgba(0,0,0, 0.8);
  border: 1px solid silver;
  border-radius: 5px;
  option {
    background-image: $back-form;
    background: $color-black;
  }
}

.game-input.coord {
  color: #fff!important;
  width: 100%;
  height: 19px;
  font-size: 1.2rem;
  background-image: $back-form;
  line-height: 1.5rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  text-shadow: 1.5px 1.5px 2px rgba(0,0,0, 0.8);
  border: 1px solid silver;
  border-radius: 5px;
  option {
    background-image: $back-form;
    background: $color-black;
  }
}

.game-input-off {
  color: $color-red;
  width: 100%;
  height: 30px;
  font-size: 1.2rem;
  background-image: $back-blocked;
  background-size: cover;
  line-height: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  text-shadow: 1.5px 1.5px 2px rgba(0,0,0, 0.8);
  border: 1px solid silver;
  border-radius: 5px;
  option {
    background-image: $back-blocked;
    background: $color-black;
  }
}

.border-solid-img {
  border: 1px solid darkorange;
}

.border-dashed-img {
  border: 1px dashed darkorange;
}

.select2.form-control {
  height: 30px!important;
}

a:focus {
  color: orange;
}

.table-bordered tr th {
  vertical-align: middle!important;
}

.table-bordered tr td {
  vertical-align: middle!important;
}

a:hover {
  color: orangered!important;
  text-decoration: none;
}

#planet_rename_name {
  height: 20px;
}

.table-dark {
  background-image: $back-basic;
}

.borderOverview {
  border: 1px solid white;
}

.table .table {
  background-color: #212529!important;
}
.text-much-more {
  font-size: 4rem;
}

.text-more {
  font-size: 1.8rem;
}

.text-less {
  font-size: 1rem;
}

.text-little {
  font-size: 0.8rem;
}

.text-mini {
  font-size: 0.7rem;
}

.text-middle {
  font-size: 1.4rem;
}

.confirmation {
  border: 10px solid silver;
  width: auto;
  background-color: $color-black!important;
  color: white;
  .popover-header {
    background-color: $color-black!important;
  }
  .btn-primary {
    background-color: darkred;
    border: none;
  }
  .btn-secondary {
    margin-left: 0.8rem!important;
    background-color: darkgreen;
    border: none;
  }
}

.modal-dialog {
  margin-top: 40%;
}

.close.plus {
  color: orange;
}

.close.plus:hover {
  color: $color-red;
}

.modal-content.special {
  background-image: $back-basic;
  border-radius: 20px;
  border: 1px solid white;
}

.alerte-flash-error {
  color: darkorange;
  width: fit-content;
  margin: auto;
  padding: 1rem 2.5rem;
  font-size: 3rem;
  background-color: rgba(0,0,0, 0.7);
  border: 1px solid silver;
  border-radius: .3rem;
  text-shadow: 1.5px 1.5px 2px rgba(0,0,0, 0.8);
}

.back-rouge {
  background-color: #ff1a1a;
}

.back-vert {
  background-color: darkolivegreen;
}

.back-orange {
  background-color: darkorange;
}

.back-jaune {
  background-color: #F0FF54;
}

.text-orange {
  color: #FC7F23;
}

.text-blanc {
  color: white;
}

.text-jaune {
  color: $color-yellow;
}

.text-or {
  color: gold;
}

.text-argent {
  color: silver;
}

.text-bronze {
  color: saddlebrown;
}

.text-rouge {
  color: $color-red;
}

.text-vert {
  color: lawngreen;
}

.text-vert2 {
  color: darkgreen;
}

.text-bleu {
  color: deepskyblue;
}

@media screen and (min-width: 1025px) {
  .front-block {
    margin: auto;
    color: #fff;
    max-width: 70%;
    word-wrap: break-word;
  }
  .front-block .galaxy {
    max-width: 760px;
    margin: auto;
  }
  .front-block.userPage {
    padding: 0 1rem 2rem 1rem;
    font-family: AppleGothic;
    font-size: 2rem;
    background-image: $back-basic;
    border: 1px solid silver;
    border-radius: 5px;
  }
}

@media screen and (max-width: 1025px) {
  .front-block {
    margin: auto;
    color: #fff;
    max-width: 60%;
    word-wrap: break-word;
  }
  .front-block .galaxy {
    max-width: 760px;
    margin: auto;
  }
  .front-block.userPage {
    padding: 0 1rem 2rem 1rem;
    font-family: AppleGothic;
    font-size: 2rem;
    background-image: $back-basic;
    border: 1px solid silver;
    border-radius: 5px;
  }
}

.front-block-share {
  max-width: 650px;
  margin: 5rem auto auto;
  color: #fff;
  width: fit-content;
  word-wrap: break-word;
}

.tutorial {
  font-size: 1.4rem;
  text-shadow: 1px 1px 1px rgba(0,0,0, 0.1);
  color: lightblue;
  border: 1px solid white;
  background-image: $back-tuto-xs;
  background-repeat: repeat;
  background-size: cover;
  background-color: $color-black;
}

.tutorial-title {
  text-shadow: 2px 2px 1px rgba(0,0,0, 1);
}

.tutorial-hide {
  color: grey!important;
  pointer-events: none;
  text-decoration: line-through;
  background: rgba(218,223,225, 0.05);
}

.tutorial-hide a{
  color: grey!important;
}

.tutorial-hide a div span{
  color: grey!important;
}

.tutorial-show {
  background-image: $back-tuto;
  background-repeat: repeat;
  background-size: cover;
  background-color: $color-black;
}

span a {
  color: orange;
}

.navbar-left a div span:not(.text-vert) {
  color: white;
}

.navbar-left a div span:hover {
  color: #FC7F23;
  text-decoration: none;
}

.navbar-left a:hover {
  color: #FC7F23;
  text-decoration: none;
  div span:not(.text-vert) {
    color: #FC7F23;
    text-decoration: none;
  }
}

.navbar-left a:focus {
  color: #FC7F23;
  text-decoration: none;
  div span {
    color: white;
    text-decoration: none;
  }
}

.right-link-planet-first div span {
  white-space: nowrap;
  font-size: 0.8rem;
}

.right-link-planet a div span {
    white-space: nowrap;
    color: orange;
    text-decoration: none;
}

.right-link-planet a:hover {
    div span {
      white-space: nowrap;
      color: #FC7F23;
      text-decoration: none;
  }
}

.cdr-on-planet {
  position: absolute;
  z-index: 4;
  left: 2rem;
  background: rgba(0,0,0, 0.4);
  border-radius: 25px;
}

.back-planet {
  position: absolute;
  z-index: 2;
}

li a {
  color: orange;
}

.footer {
  z-index: 2;
  a {
    color: #fff;
    text-shadow: 1.5px 1.5px 2px rgba(0,0,0, 0.8);
  }
  a:hover {
    color: #fff!important;
    background-color: rgba(0,0,0, 0.4);
    text-decoration: none;
  }
}

.footer-right {
  position: fixed;
  padding: 0.8rem;
  right: 0;
  bottom: 0;
}

.footer-left {
  position: fixed;
  padding: 0.8rem;
  left: 0;
  bottom: 0;
}

.block-title {
  padding: 1rem;
  text-align: center;
}

.seller-table {
  width: fit-content!important;
}

input {
  color: $color-black;
}

// Globals colors backgrounds

.availableBack {
  background-image: $back-green;
}

.currentBack {
  background-color: $color-lapize!important;
}

.warningBack {
  background-image: $back-red;
}

.blockedBack {
  background-image: $back-blocked, $back-blocked-double;
  background-repeat: no-repeat, repeat;
  background-color: $color-black;
}

.camo-green {
  background-image: $back-camo-green;
  background-color: $color-black;
  background-repeat: no-repeat;
  text-shadow: 1px 1px 1px black;
  background-size: cover;
}

.camo-red {
  background-image: $back-camo-red;
  background-color: $color-black;
  background-repeat: no-repeat;
  background-size: cover;
  text-shadow: 1px 1px 1px black;
  font-size: 1.5rem;
}

// Globals colors borders

.currentPlanet {
  animation-name: bounce;
  border: 1px solid #DDD;
  box-shadow:0 0 10px $color-turquoise;
}

// Globals colors texts

.rank-good-border {
  margin-left: 1rem;
  border-right: 1px solid rgba(0, 255, 255, 0.5);
  border-left: 1px solid rgba(0, 255, 255, 0.5);
  border-radius: 8px;
  padding: 0.2rem 0.5rem;
}

.rank-bad-border {
  margin-left: 1rem;
  border-right: 1px solid rgba(255, 255, 0, 0.5);
  border-left: 1px solid rgba(255, 255, 0, 0.5);
  border-radius: 8px;
  padding: 0.2rem 0.5rem;
}

.logout-private {
  font-size: 2rem;
  color: $color-red;
  padding: 1rem 3rem;
  background-color: $color-black;
  border: 1px solid $color-red;
  border-radius: 5px;
}

@-webkit-keyframes clignote-red {
  0%{box-shadow: 0 0 20px #ff0000}
  50%{box-shadow: 0 0 0 #ff0000}
  100%{box-shadow: 0 0 20px #ff0000}
}

@-webkit-keyframes clignote-turquoise {
  0%{box-shadow: 0 0 20px $color-turquoise}
  50%{box-shadow: 0 0 0 $color-turquoise}
  100%{box-shadow: 0 0 20px $color-turquoise}
}

.catch-border {
  animation-name: clignote-turquoise;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  border: 1px solid $color-turquoise;
}

.alert-border {
  animation-name: clignote-red;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  border: 1px solid $color-red;
}

.bounce-border {
  border: 1px solid #DDD;
  text-shadow: 0 1px 0 white;
  box-shadow:0 0 10px $color-turquoise;
}

output {
  display: block;
  padding-top: 0;
  color: $color-yellow;
}
.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

@media (min-width: 32em) {
  .cc-window.cc-banner {
    padding: 0.2em 1em
  }
  .cc-message {
    font-size: 0.9em;
    line-height: 1.4
  }
  .cc-compliance {
    padding-left: 1em
  }
}

